--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>MfLayout</title>
+  <title>Mf-Layout</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Prospero:wght@400;700&display=swap" rel="stylesheet">
-
+  <link rel="icon" type="image/x-icon" href="assets/imagenes/InterRapidisimo.ico">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
